[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Environmnent/Train00.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sounds/Train00.ogg" type="AudioStream" id=2]
[ext_resource path="res://Objects/BackgroundTrain.gd" type="Script" id=3]

[node name="BackgroundTrain" type="Node2D"]
position = Vector2( -4100.59, -816.511 )
scale = Vector2( 20, 15 )
z_index = -4
script = ExtResource( 3 )

[node name="Train00" type="Sprite" parent="."]
position = Vector2( 159.952, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Train00"]
position = Vector2( -140.912, 234.294 )
stream = ExtResource( 2 )
pitch_scale = 0.7
max_distance = 15000.0
attenuation = 0.999999

[node name="Train01" type="Sprite" parent="."]
position = Vector2( 372.403, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Train01"]
position = Vector2( -179.52, 219.333 )
stream = ExtResource( 2 )
pitch_scale = 0.7
max_distance = 15000.0
attenuation = 0.999999

[node name="Train02" type="Sprite" parent="."]
position = Vector2( 585.009, 0 )
scale = Vector2( 0.09, 0.12 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Train02"]
position = Vector2( 242.195, 234.293 )
stream = ExtResource( 2 )
pitch_scale = 0.7
max_distance = 15000.0
attenuation = 0.999999
